@@ -29,7 +29,7 @@ public class StreamMain {
         Customer customer5 = buildCustomer(10005, "Rakhul", 17, addressList);
         List<Customer> customers = Arrays.asList(customer1, customer2, customer5, customer6, customer4, customer3);
 
-        List<String> names = Arrays.asList("Vijay", "Lakshmi", "Harika", "Harini", "Lathika", "Chaarvi", "Vinay", "Chaarvi");
+        List<String> names = Arrays.asList("Vijay","Vijay", "Chaarvi", "Lakshmi", "Harika", "Harini", "Lathika", "Chaarvi", "Vinay", "Chaarvi");
         String strNames = "Vijay|Lakshmi|Harika|Harini|Lathika|Chaarvi|Vinay|Chaarvi";
         String strFilter = "areaType.id:County;State;City;Mandal;Street,provider.id:Airtel;Jio;Hathway;ACT";
         Map<Integer, String> map = new HashMap<>();
@@ -39,20 +39,22 @@ public class StreamMain {
         map.put(4, "Harika");
         map.put(7, "Vij@y");
         map.put(6, "Naga1234");
-        List<Integer> numbers = Arrays.asList(1, 1, 1, 2, 2, 3, 3, 1, 1);
+        List<Integer> numbers = List.of(1, 1, 1, 2, 2, 3, 3, 1, 1);
 
         log.info("Unique Customers: {} ", getUnique(customers));
-        log.info("Unique Customers size: {} ", getUnique(customers).size());
-        log.info("Young Customer Names: {}", getYoungCustomers(customers));
+        log.info("Actual Customers size: {}  Unique Customers size: {} ", customers.size(), getUnique(customers).size());
+        log.info("Young Customer Names: {}", getYoungCustomerNames(customers));
         log.info("Count Young Customers: {}", getYoungCustomerCount(customers));
         log.info("Any Customer with Vijay: {}", getAnyCustWithNameMatch(customers, "Vijay"));
-        log.info("Any Customer with Charvi: {}", getAnyCustWithNameMatch(customers, "Charvi"));
-        arithMeticOperations(customers);
+        log.info("Any Customer with Chaarvi: {}", getAnyCustWithNameMatch(customers, "Chaarvi"));
+        log.info("Find Oldest Customer Name: {}", findOldestCustomer(customers).getName());
         log.info("Sort By Name and ID: {}", sortByNameAndId(customers));
-        log.info("Customer Names: {}", getNamesPipeSeparate(customers));
-        groupByCustomer(customers).forEach((name, empList) -> log.info("Group By Customer Name: {} => {}", name, empList.size()));
-        log.info("Set of PinCodes: {}", getPincodes(customers));
-        log.info("Convert List to | String: {}", convertToString(names, "|"));
+         log.info("Customer Names: {}", getNamesPipeSeparate(customers));
+        log.info("Group By Customer Name: {}", getCustomerNameWithCount(customers));
+        log.info("Numbers count: {}", getNumberCount(List.of(1, 9, 8, 1, 3, 8, 4, 8, 5, 4, 3, 5, 9)));
+        log.info("Set of PinCodes: {}", getPinCodes(customers));
+        log.info("Customer Name with Set of PinCodes: {}", getCustomerNameWithPinCodes(customers));
+        log.info("Convert List to | String: {}", convertToString(names, " | "));
         // String with | separator won't work, Investigate Why
         log.info("Convert | String to List {}", convertToList(strNames, "\\|"));
         log.info("Convert | String to List Size: {}", convertToList(strNames, "\\|").size());
@@ -61,11 +63,12 @@ public class StreamMain {
         log.info("Limit Names first 5 names: {}", limitNames(names, 5));
         log.info("Skip Names first 3 names in list: {}", skipNames(names, 3));
         log.info("Filter Map: {}", getFilterMap(strFilter, ",", ":", ";"));
-        log.info("Only Alphabet values in Map: {}", getAlphabeticValueMap(map));
+        log.info("Only Alphabet values in Map: {}", getOnlyAlphabeticValuesInMap(map));
         log.info("Sum of Squares numbers: {}", (int) getSquareSum(numbers));
         log.info("Find Frequency: {}", findFrequency(numbers));
         log.info("Find max number: {}", findMaxNumber(numbers));
-        findMostDuplicate(Arrays.asList(1, 3, 7, 1, 4, -3, -7, -7, 8, 9, 1, 5, 5, 7));
+        findMostDuplicate(List.of(1, 3, 7, 1, 4, -3, -7, -7, 8, 9, 1, 5, 5, 7));
+        log.info("Most Repeated Name: {}", findMostDuplicateString(names));
 
     }
 }
